working on TestJavaUtil